<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0px"
            android:layout_height="match_parent">
        <!-- 혜택 안내 -->
        <ImageView
                android:layout_weight="7"
                android:id="@+id/img_benefit_guide"
                android:paddingLeft="@dimen/activity_margin_32"
                android:paddingRight="@dimen/activity_margin_32"
                android:layout_width="match_parent"
                android:layout_height="0px"/>

        <!-- 이용약관 및 개인정보취급방침 -->
        <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_policy"
                android:textSize="@dimen/text_size_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/policy"/>

    </LinearLayout>

    <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0px"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="@dimen/activity_margin_32"
                android:paddingBottom="@dimen/activity_margin_32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <!-- 전화번호 입력창 -->
            <LinearLayout
                    android:id="@+id/ll_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="bottom">

                <EditText
                        android:id="@+id/edt_phone"
                        android:gravity="center"
                        android:background="@null"
                        android:textSize="@dimen/text_size_60"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"/>

                <!-- 숫자패드 -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent">
                    <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rowCount="4"
                            android:columnCount="3"
                            android:orientation="vertical">

                        <Button
                                android:id="@+id/btn_num1"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum1"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num2"
                                android:layout_row="0"
                                android:layout_column="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:layout_marginRight="@dimen/activity_margin_16"
                                android:layout_marginLeft="@dimen/activity_margin_16"
                                android:layout_marginBottom="@dimen/activity_margin_16"
                                android:text="@string/btnNum2"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num3"
                                android:layout_row="0"
                                android:layout_column="2"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum3"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num4"
                                android:layout_row="1"
                                android:layout_column="0"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum4"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num5"
                                android:layout_row="1"
                                android:layout_column="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:layout_marginRight="@dimen/activity_margin_16"
                                android:layout_marginLeft="@dimen/activity_margin_16"
                                android:layout_marginBottom="@dimen/activity_margin_16"
                                android:text="@string/btnNum5"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num6"
                                android:layout_row="1"
                                android:layout_column="2"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum6"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num7"
                                android:layout_row="2"
                                android:layout_column="0"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum7"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num8"
                                android:layout_row="2"
                                android:layout_column="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:layout_marginRight="@dimen/activity_margin_16"
                                android:layout_marginLeft="@dimen/activity_margin_16"
                                android:layout_marginBottom="@dimen/activity_margin_16"
                                android:text="@string/btnNum8"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num9"
                                android:layout_row="2"
                                android:layout_column="2"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnNum9"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_delete"
                                android:layout_row="3"
                                android:layout_column="0"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_16"
                                android:paddingRight="@dimen/activity_margin_16"
                                android:background="@drawable/round_corner_red"
                                android:text="@string/btnDel"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_num0"
                                android:layout_row="3"
                                android:layout_column="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:paddingLeft="@dimen/activity_margin_32"
                                android:paddingRight="@dimen/activity_margin_32"
                                android:background="@drawable/round_corner_red"
                                android:layout_marginRight="@dimen/activity_margin_16"
                                android:layout_marginLeft="@dimen/activity_margin_16"
                                android:layout_marginBottom="@dimen/activity_margin_16"
                                android:text="@string/btnNum0"
                                android:textAlignment="center"/>

                        <Button
                                android:id="@+id/btn_ok"
                                android:layout_row="3"
                                android:layout_column="2"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_size_60"
                                android:background="@drawable/round_corner_red"

                                android:text="@string/btnOk"
                                android:textAlignment="center"/>

                    </GridLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
