<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:background="@drawable/background"
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- 로그인 -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_margin_32"
                android:paddingLeft="@dimen/activity_margin_32"
                android:paddingTop="@dimen/activity_margin_16"
                android:paddingBottom="@dimen/activity_margin_16"
                android:background="@drawable/round_corner_white"
                android:layout_gravity="center"
                android:orientation="vertical">

            <!-- 위시와이드 로고 -->
            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:gravity="center">
                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/logo"/>
            </LinearLayout>

            <!-- ID/PW 입력 -->
            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_margin_16"
                    android:paddingBottom="@dimen/activity_margin_16"
                    android:orientation="vertical">

                <!-- ID -->
                <android.support.design.widget.TextInputLayout
                        android:layout_marginBottom="@dimen/activity_margin_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/edt_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_30"
                            android:hint="@string/prompt_id"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <!-- PW -->
                <android.support.design.widget.TextInputLayout
                        android:layout_marginBottom="@dimen/activity_margin_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:textSize="@dimen/text_size_30"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <!-- 디바이스 등록 -->
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/edt_device_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_30"
                            android:hint="@string/prompt_device_id"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>


                <!-- SignIn Button -->
                <Button
                        android:id="@+id/btn_sign_in"
                        style="?android:textAppearanceSmall"
                        android:background="@drawable/round_corner_red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_30"
                        android:paddingTop="@dimen/activity_margin_16"
                        android:paddingBottom="@dimen/activity_margin_16"
                        android:layout_marginTop="@dimen/activity_margin_24"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:id="@+id/btn_stamp_sign_in"
                        style="?android:textAppearanceSmall"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="도장"
                        android:textStyle="bold"/>

                <Button
                        android:id="@+id/btn_point_sign_in"
                        style="?android:textAppearanceSmall"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="포인트"
                        android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>



    </ScrollView>

</LinearLayout>
